remove library button as users cant store on local storage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerroom-interview-challenge",
+  "name": "audio-player",
   "version": "0.1.0",
   "private": true,
   "scripts": {
