--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "prettier": "^3.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
